<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> Memory Aid </string>
    <string name="action_settings"> Memory Aid </string>

    <string name="title_Settings">Settings</string>
    <string name="title_activity_profile_manager">profile manager</string>
    <string name="Headmenutxt1"> View Contacts </string>
    <string name="Headmenutxt2">Contact / Profile manager </string>
    <string name="Headmenutxt3"> Settings </string>

    <string name="ProfileHeader"> Profile management</string>
    <string name="ProfileManagertxt1"> Add Profile </string>
    <string name="ProfileManagertxt2"> Edit Profile </string>
    <string name="ProfileManagertxt3"> Delete Profile </string>
    <string name="ProfileManagertxt4"> Change Profile </string>

    <string name="ContactTitle">Contact Manager</string>
    <string name="AddContact">Add contact</string>
    <string name="EditeContact">Edit Contact</string>
    <string name="DeleteContact">Delete Contact</string>

    <string name="title_activity_new_user_creation">NewUserCreation</string>
    <string name="title_activity_create_new_user">Create new user</string>

    <string name="ContactList">Contact list</string>
    <string name="Add_Contact">Add contact</string>
    <string name="TitleCreateNewProfile">Create new profile</string>
    <string name="btnPicture">Add picture</string>
    <string name="Firstname">First name: </string>
    <string name="Lastname">Last name:</string>
    <string name="hintFirstName">enter first name here</string>
    <string name="hintLastName">enter last name here</string>
    <string name="Relation">Relation: </string>
    <string name="hintRelation">enter marital status</string>
    <string name="PhoneNumber">Phone number:</string>
    <string name="hintPhoneNumber">enter phone number here</string>
    <string name="Date_of_birth">Date of birth</string>
    <string name="hintDate_of_birth">enter date of birth</string>
    <string name="Basic_info">Basic information: </string>
    <string name="hintBasicInfo">enter basic info here</string>
    <string name="password">Password: </string>
    <string name="hintpassword">enter password here </string>

    <string name="txtGallery">photogallery</string>
    <string name="txtCamera">Camera</string>

    <string name="Language">Language</string>
    <string name="TextAndImageSize">Text &amp; Image Size</string>
    <string name="English">English</string>
    <string name="Big">Big</string>
    <string name="Medium">Medium</string>
    <string name="Small">Small</string>
    <string name="Frans">Françias</string>
    <string name="Deutsch">Deutsch</string>
    <string name="Espanol">Espanol</string>
    <string name="ChooseFavColor">Choose your favorite color</string>

    <string name="ImageLabel">Image of the person</string>
    <string name="FirstNameText">  </string>
    <string name="LastNameText">  </string>
    <string name="RelationText">  </string>
    <string name="PhonenmrText">  </string>
    <string name="BasicInfoText1">  </string>
    <string name="BasicInfoText2">   </string>
    <string name="BasicInfoText3">   </string>
    <string name="SaveButton">Save</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_view">ProfileView</string>
    <string name="title_activity_contact_adding">ContactAdding</string>
    <string name="title_activity_profile_manager_advanced">Profile Manager</string>
</resources>
