<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.memoryaid.memoryaid.CreateNewUser">




    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="28dp"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/TitleCreateNewProfile"
            />
        <Button
            android:gravity="center"
            android:text="@string/btnPicture"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:enabled="true"
            android:maxHeight="0dp"
            android:onclick="AddPicture"
            android:id="@+id/btnAddPhoto"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:id="@+id/ChosenPhoto"
            android:layout_gravity="center"/>

        </LinearLayout>


    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">7
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Firstname"
                android:theme="@style/NewUserUI"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintFirstName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lastname"
                android:theme="@style/NewUserUI"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintLastName"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PhoneNumber"
                android:theme="@style/NewUserUI"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintPhoneNumber"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date_of_birth"
                android:theme="@style/NewUserUI"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintDate_of_birth"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Basic_info"
                android:theme="@style/NewUserUI"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hintBasicInfo"/>



            </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="Save"/>

        </LinearLayout>

</LinearLayout>