<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Homescreen"
    android:background="#ffffffff"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:layout_marginBottom="40dp"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:text="@string/Headmenutxt1"
        android:layout_marginBottom="40dp"
        android:id="@+id/CreateUser"
        android:onClick="CreateNewUser"
        style="@style/AudioFileInfoOverlayText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:layout_marginBottom="40dp"
        android:text="@string/Headmenutxt2"
        style="@style/AudioFileInfoOverlayText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:layout_marginBottom="40dp"
        android:text="@string/Headmenutxt3"
        style="@style/AudioFileInfoOverlayText"/>

</LinearLayout>



