<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
   tools:context="com.memoryaid.memoryaid.ProfileManager">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="Profile Management"
        android:background="#FFFFFF"/>


    <Button
        android:id="@+id/btnAddProfile"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:linksClickable="false"
        android:textColor="#ff000000"
        android:text="@string/ProfileManagertxt1"
        />

    <Button
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:id="@+id/btnEditProfile"
        android:textColor="#ff000000"
        android:text="@string/ProfileManagertxt2"
        />

    <Button
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColor="#ff000000"
        android:id="@+id/btnDeleteProfile"
        android:text="@string/ProfileManagertxt3"
        />


</LinearLayout>
    </LinearLayout>
