<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="@dimen/abc_action_bar_default_height_material">

    <LinearLayout
        android:id="@+id/BlueBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/EditLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ProfileManagertxt2"
                android:textColor="#000000"
                android:textSize="40sp"
                android:background="#FFFFFF"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="560dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/FirstNameField"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/FirstNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:text="@string/Firstname"
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:background="#FFFFFF"/>

                <EditText
                    android:id="@+id/FirstNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textColor="#000000"
                    android:textSize="23sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LastNameField"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/LastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:text="@string/Lastname"
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:background="#FFFFFF"/>

                <EditText
                    android:id="@+id/LastNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textColor="#000000"
                    android:textSize="23sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/RelationField"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/RelationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:text="@string/Relation"
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:background="#FFFFFF"/>

                <EditText
                    android:id="@+id/RelationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textColor="#000000"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/NumberField"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="#FFFFFF">


                <TextView
                    android:id="@+id/PhonenmrLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:text="@string/PhoneNumber"
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:background="#FFFFFF"/>

                <EditText
                    android:id="@+id/PhonenmrText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FirstNameText"
                    android:textSize="23sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/InfoField"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/BasicInfoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:text="@string/Basic_info"
                    android:textColor="#000000"
                    android:textSize="29sp"
                    android:background="#FFFFFF"/>

                <EditText
                    android:id="@+id/BasicInfoText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textSize="23sp" />

                <EditText
                    android:id="@+id/BasicInfoText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textSize="23sp" />

                <EditText
                    android:id="@+id/BasicInfoText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:inputType="date"
                    android:text="@string/FirstNameText"
                    android:textSize="23sp" />

            </LinearLayout>

            <Button
                android:id="@+id/SaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonsave"
                android:text="@string/SaveButton"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
